components/Landing/Countdown/countdown.module.scss
.countdown {
  font-family: Poppins;
  font-style: normal;
  font-weight: 700;
  font-size: 24px;
  overflow: hidden;
  pointer-events: none;

  display: flex;
  justify-content: space-between;
  position: fixed;
  width: 200px;

  @media (width > 760px) {
    bottom: 40px;
    left: 25px;
  }

  .timeSegment {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  p {
    background: var(--gold-title, linear-gradient(180deg, #876D24 -18.6%, #F3D57B 18.4%, #B69637 68.61%, #DCBF69 113.54%));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  @media (width <=1262px) {
    font-size: 20px;
  }

  @media (width <= 760px) {
    left: 50%;
    transform: translateX(-50%);
    top: 200px;
  }

  @media (width <= 585px) {
    top: 275px;
  }
}

